--- a/Cpts321 Final Exam/Interest Calculator/Interest Calculator.csproj
+++ b/Cpts321 Final Exam/Interest Calculator/Interest Calculator.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Cpts321_Final_Exam</RootNamespace>
+    <RootNamespace>Interest_Calculator</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
