--- a/Cpts321 Final Exam/Cpts321 Final Exam/Cpts321 Final Exam.csproj
+++ b/Cpts321 Final Exam/Cpts321 Final Exam/Cpts321 Final Exam.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankEngine\Bank Engine.csproj" />
+  </ItemGroup>
+
 </Project>
