--- a/Cpts321 Final Exam/BankEngine/Bank Engine.csproj
+++ b/Cpts321 Final Exam/BankEngine/Bank Engine.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Authenticator\Authenticator.csproj" />
+  </ItemGroup>
+
 </Project>
