--- a/Cpts321 Final Exam/Final Exam Functionality Testing Suite/Final Exam Functionality Testing Suite.csproj
+++ b/Cpts321 Final Exam/Final Exam Functionality Testing Suite/Final Exam Functionality Testing Suite.csproj
@@ -26,4 +26,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankEngine\Bank Engine.csproj" />
+  </ItemGroup>
+
 </Project>
